# github-analysis

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: python-package.yml
src/github_analysis/: __main__.py  connectors.py  db.py  fetch.py
tests/: test_connectors.py  test_fetchers.py  test_main.py
tests/data/: UKRI.txt  UKRI_10.txt  jag1g13+pycgtool.response
tests/data/COMMITS.d/: jag1g13+pycgtool.responses
